--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,8 @@ dependencies {
             'com.codeborne:selenide:6.11.0',
             'com.github.javafaker:javafaker:1.0.2',
             'org.junit.jupiter:junit-jupiter:5.9.1',
-            'io.qameta.allure:allure-selenide:2.20.1')
+            'io.qameta.allure:allure-selenide:2.20.1',
+            'org.aeonbits.owner:owner:1.0.12')
     testRuntimeOnly(
             'org.slf4j:slf4j-simple:2.0.6')
 }
